test/fixtures/compile/iif/iif.missing.nb.ne.wp.var.error
SyntaxError: Expecting "else" but got "EOF" (fixtures/compile/iif/iif.missing.nb.ne.wp.var.ks:5:2)